// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swiper flatlist renders children 1`] = `
<RCTScrollView
  data={
    [
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "source": {
            "uri": "https://...",
          },
        },
        "type": [Function],
      },
      {
        "$$typeof": Symbol(react.transitional.element),
        "_owner": null,
        "_store": {},
        "key": null,
        "props": {
          "source": {
            "uri": "https://...",
          },
        },
        "type": [Function],
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  horizontal={true}
  initialNumToRender={1}
  initialScrollIndex={0}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onScrollToIndexFailed={[Function]}
  pagingEnabled={true}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEnabled={true}
  scrollEventThrottle={0.0001}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={
    [
      {
        "onViewableItemsChanged": [Function],
        "viewabilityConfig": {
          "itemVisiblePercentThreshold": 60,
          "minimumViewTime": 200,
        },
      },
    ]
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      style={
        [
          {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <Image
        source={
          {
            "uri": "https://...",
          }
        }
      />
    </View>
    <View
      style={
        {
          "width": 750,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`swiper flatlist renders correctly 1`] = `
<RCTScrollView
  data={
    [
      {
        "id": 1,
        "thumbnail": {
          "uri": "https://...",
        },
      },
      {
        "id": 2,
        "thumbnail": {
          "uri": "https://...",
        },
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  horizontal={true}
  initialNumToRender={1}
  initialScrollIndex={0}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onScrollToIndexFailed={[Function]}
  pagingEnabled={true}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEnabled={true}
  scrollEventThrottle={0.0001}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={
    [
      {
        "onViewableItemsChanged": [Function],
        "viewabilityConfig": {
          "itemVisiblePercentThreshold": 60,
          "minimumViewTime": 200,
        },
      },
    ]
  }
>
  <View>
    <View
      onFocusCapture={[Function]}
      style={
        [
          {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <Image
        source={
          {
            "uri": "https://...",
          }
        }
      />
    </View>
    <View
      style={
        {
          "width": 750,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`swiper flatlist renders empty data correctly 1`] = `
<RCTScrollView
  data={[]}
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  horizontal={true}
  initialNumToRender={1}
  initialScrollIndex={0}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  onScrollToIndexFailed={[Function]}
  pagingEnabled={true}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEnabled={true}
  scrollEventThrottle={0.0001}
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  stickyHeaderIndices={[]}
  viewabilityConfigCallbackPairs={
    [
      {
        "onViewableItemsChanged": [Function],
        "viewabilityConfig": {
          "itemVisiblePercentThreshold": 60,
          "minimumViewTime": 200,
        },
      },
    ]
  }
>
  <View />
</RCTScrollView>
`;
